# best_practics_with_BD

./: README.md  data.json  data_example.py  main.py  pyproject.toml  utils.py
