[tool.poetry]
name = "best-practics-with-bd"
version = "0.1.0"
description = ""
authors = ["larisa <larisa.mih@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.120.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
